contrast correction

--- a/src/components/banner/_banner.scss
+++ b/src/components/banner/_banner.scss
@@ -56,7 +56,7 @@
       width: 90%;
     }
 
-    h1 {
+    span {
       font-size: 3.2em;
       color: $font-color;
       font-family: $font-secondary;
