--- a/src/components/footer/_footer.scss
+++ b/src/components/footer/_footer.scss
@@ -82,7 +82,7 @@ border-radius: 1em;
     li a {
     font-family: $font-secondary;
     font-size: 1em;
-    color: $h2;
+    color: $bg-color;
 
     &:hover {
       scale: (3);
